--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "font-awesome": "^4.7.0",
     "moment": "^2.23.0",
     "mutationobserver-shim": "^0.3.3",
+    "ng-http-loader": "^5.0.1",
     "ng2-charts": "^1.6.0",
     "ngx-bootstrap": "^3.1.4",
     "ngx-perfect-scrollbar": "^7.2.0",
