--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@coreui/coreui": "^2.1.6",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "0.3.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "bootstrap": "^4.2.1",
     "chart.js": "^2.7.3",
     "core-js": "^2.6.2",
@@ -36,7 +38,7 @@
     "ng2-charts": "^1.6.0",
     "ngx-bootstrap": "^3.1.4",
     "ngx-perfect-scrollbar": "^7.2.0",
-    "rxjs": "^6.3.3",
+    "rxjs": "^6.4.0",
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "^1.1.2",
     "tsickle": "^0.34.0",
