auth module added

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@coreui/icons": "0.3.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "auth0-js": "^9.10.0",
     "bootstrap": "^4.2.1",
     "chart.js": "^2.7.3",
     "core-js": "^2.6.2",
@@ -50,6 +51,7 @@
     "@angular/cli": "^7.2.2",
     "@angular/compiler-cli": "^7.2.1",
     "@angular/language-service": "^7.2.1",
+    "@types/auth0-js": "^8.11.11",
     "@types/jasmine": "^3.3.7",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^10.12.18",
